--- a/index.html
+++ b/index.html
@@ -1,126 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-  <title>Single Page Application</title>
+  <title>Json Server로 구성한 Single Page Application</title>
   <meta name="view-transition" content="same-origin" />
-  <style>
-    @font-face {
-    font-family: 'Arita-dotum-Medium';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    }
-    * {
-      font-family: 'Arita-dotum-Medium', 'Noto Sans KR', 'Noto Sans Korean', -apple-system, 'SF Pro Display', 'Helvetica Neue', 'Apple SD Gothic Neo', 'Roboto', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
-    }
-    #main_text {
-        text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    table td, table th {
-      padding: 15px;
-      text-align: left;
-      border: 1px solid #ddd;
-    }
-    table tr:nth-child(even) {
-      background-color: #f4f4f4;
-    }
-    table tr:hover {
-      background-color: #ddd;
-    }
-    #main_btn {
-        height: 2vh;
-        padding: 1rem;
-        font-weight: bold;
-        margin-left: 30%;
-        margin-right: 30%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        color: black;
-    }
-    a:visited {
-      color : black;
-    }
-    #main_btn h3 {
-      margin-right: 20px;
-    }
-    #create-form, #update-form {
-      display: none;
-    }
-
-    #content {
-        width: 190vh;
-        height: 80vh;
-        margin-top: 1.5em;
-        margin-left: 1.5em;
-        border: 1px black solid;
-        overflow-y:auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        top: 50%;
-        left: 50%;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(lightCyan, skyBlue, deepSkyBlue);
-    }
-    .department-image {
-      max-width: 50%;
-      height: auto;
-    }
-
-    textarea {
-      display:block;
-      width: 100%;
-      padding: 12px 20px;
-      margin: 8px 0;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size:14px;
-    }
-    button {
-      background-color: #c9ad88;
-      padding: 8px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-      margin-top: 15px;
-    }
-    button:hover {
-      background-color: #d6ad78;
-    }
-
-    .banner-content {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
-
-    #logo_img {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-    }
-
-    .dev_link {
-     max-width: 50px;
-     height:auto;
-    }
-    .dev_link_div{
-    margin-top: 10vh;
-    margin-left: 2vh;
-    }
-  </style>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div id="banner" style="position :relative; margin: 10px">
@@ -128,39 +11,110 @@
       <img src="/pic/logo.png" id="logo_img"/>
     </div>
   </div>
-  
+
   <div id="main_btn">
     <h3><a href="#" id="introduction-link">자기소개</a></h3>
     <h3><a href="#" id="department-link">학과소개</a></h3>
     <h3><a href="#" id="posts-link">게시판</a></h3>
+    <h3><a href="" id="home">홈으로 돌아가기</a></h3>
   </div>
-  <div id="logininfo" style="display: none; position: absolute; top:10vh; right:22vh"></div>
-    </div>
+  <div id="logininfo" style="display: none; position: absolute; top:9vh; right:25vh; border: 1px solid #535151; padding: 5px; border-radius: 5px;"></div>
     <div id="logout-form">
       <button id="logout-button" style="margin-right:10vh; float:right;">로그아웃</button>
     </div>
-
-  <div id="login-form" style="float:right; margin-right: 130px;">
-    <label for="username">사용자 ID:</label>
-    <input type="text" id="username">
-    <label for="password">비밀번호:</label>
-    <input type="password" id="password">
-    <button id="login-button">로그인</button>
     
+    <div style="margin-left: 5vh;">    
+      <button id="login-button">로그인</button>
+      <button id="signup">회원가입</button>
+    </div>
+  
+    <!-- 로그인 팝업 -->
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="login-form">
+          <h2>로그인</h2>
+          <label for="username">사용자 ID:</label>
+          <input type="text" id="username">
+          <br>
+          <label for="password">비밀번호:</label>
+          <input type="password" id="password">
+          <button id="login-btn">로그인</button>
+        </div>
+      </div>
+    </div>
+  
+    <!-- 회원가입 팝업 -->
+    <div id="signupModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <form id="signup-form">
+          <h2>회원가입</h2>
+          <label for="signup-username">사용자 ID:</label>
+          <input type="text" id="signup-username" required>
+          <br>
+          <label for="signup-password">비밀번호:</label>
+          <input type="password" id="signup-password" required>
+          <button type="submit">회원가입</button>
+        </form>
+      </div>
+    </div>
+
+  <button id="profileUpdateBtn" style="display:none;">회원수정</button>
+  <!-- 회원수정 팝업 -->
+  <div id="profileUpdateModal" class="modal">
+    <div class="modal-content">
+      <span class="close-button" onclick="closeModal('profileUpdateModal')">&times;</span>
+      <h2>회원수정</h2>
+      <form id="profileUpdate-form">
+        <label for="username">사용자 ID:  </label>
+        <input type="text" id="profileUpdate-username" value="${sessionStorage.getItem('username')}" disabled>
+        <br>
+        <label for="new_password">새 비밀번호:</label>
+        <input type="password" id="profileUpdate-password">
+      </form>
+      <button id="profileUpdateButton">비밀번호 변경</button>
+      <button id="deleteuserButton">회원탈퇴</button>
+    </div>
   </div>
-    <button id="signup" style="margin-left:100px">회원가입</button>
-    <form id="signup-form" style="display: none; float:left; margin-left: 100px">
-      <label for="signup-username">아이디</label>
-      <input type="text" id="signup-username" required>
-      <label for="signup-password">비밀번호</label>
-      <input type="password" id="signup-password" required>
-      <button type="submit">회원가입</button>
-    </form>    
+  <div id="introduction_btn" style="display: none; position: relative; top:50vh; left:7vh">
+    <button id="write-introduction" style="position: absolute;">글작성</button>
+    </div>
+  <button id="departCRUD" style="display: none; position: absolute; top:17vh; right:17vh">생성/수정/삭제</button>
+
+    <div id="departModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <select id="select-department">
+          <option value="">--학과 선택--</option>
+          </select>
+          <br><br>
+          <label for="etc-input">etc:</label>
+          <input type="text" id="etc-input">
+          <br><br>
+          <button id="create-btn">생성</button>
+          <button id="update-btn">수정</button>
+          <button id="delete-btn">삭제</button>
+      </div>
+    </div>
 
   <div id="content">
     <h2>SPA(Single Page Application)으로 구성한 웹 페이지입니다.</h2>
-    <p>구현 서비스 : 자기소개 서비스, 학과소개 서비스, 게시판 서비스 - 댓글기능 포함, 로그인 서비스 - 브라우저 세션추가</p>
-    <p>Json-server는 REST API를 구축해주는 라이브러리</p>
+    <ul>
+    <li>구현 서비스 : 자기소개 서비스 CRUD 4요소(생성, 읽기, 수정, 삭제), 학과소개 서비스 CRUD 4요소(생성, 읽기, 수정, 삭제), </li>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;게시판 서비스 - 댓글기능 포함 CRUD 4요소(생성, 읽기, 수정, 삭제), 로그인 서비스 - 브라우저 세션추가 CRUD 4요소(생성, 읽기, 수정, 삭제)</p>
+    <li>Json-server는 REST API를 구축해주는 라이브러리</li>
+    <p> - 별도의 서버가 없는 환경에서 프론트엔드 작업을 진행하고자 할 때, 최소한의 실무적인 환경을 제공 받을 수 있는 API-Server 중 하나이다</p>
+    <p> - Json-server는 Node 기반으로 구동되는 , API-Server 이다</p>
+    <p> - 해당 프로젝트에서는 Fetch API를 활용하여 AJAX를 사용하였습니다.</p>
+    <p> - fetch('서버주소') 의 의미는 웹 브라우저에게 이 서버주소로 요청해줘와 같은 뜻이다.</p>
+    <p> - fetch의 뒤로 .then이 붙으면 요청이 끝나고 이 할일을 해줘 라는 뜻이다.</p>
+    <li>Fetch의 CRUD METHOD</li>
+    <p>POST : POST를 통해 해당 URI를 요청하면 리소스를 생성한다.</p>
+    <p>GET : GET를 통해 해당 리소스를 조회합니다.</p>
+    <p>PUT : PUT를 통해 해당 리소스를 수정</p>
+    <p>DELETE : DELETE를 통해 리소스를 삭제</p>
+  </ul>
   </div>
   <script src="app.js"></script>
 </body>
