--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="banner" style="position :relative; margin: 10px">
     <div class="banner-content">
-      <img src="/pic/logo.png" id="logo_img"/>
+      <img src="pic/logo.png" id="logo_img"/>
     </div>
   </div>
 
